<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_portfolio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huyvuong.adn.myappportfolio.PortfolioActivity"
    android:baselineAligned="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:text="@string/portfolio_title" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/popular_movies"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/stock_hawk"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/build_it_bigger"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/make_your_app_material"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/go_ubiquitous"/>

    <Button
        style="@style/ProjectButtonTheme.Capstone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:text="@string/capstone_my_own_app" />

</LinearLayout>
